--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,146 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  color: white;
+  background-color: #c96a90 ;
+ 
+
+}
+
+.root{
+  display: flex;
+  flex-direction: column;
+
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+header{
+  background-color: #33242a;
+  padding: 1rem;
+  display: flex;
+  justify-content: space-between;
+}
+.search{
+  background-color: transparent;
+  border: 2px solid #c96a90;
+  font-family: inherit;
+  border-radius: 100px;
+  color:white;
+  font-size: 1.2rem;
+  margin: 0.2rem;
+  padding: 0.5rem 1.5rem;
+}
+
+.search:focus {
+  outline: 0;
+}
+
+
+.movie-container{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  
+}
+.movie{
+  background-color: #33242a;
+  margin: 1rem;
+  width: 300px;
+  border-radius: 3px;
+  box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.1);
+  overflow: hidden;
+  position: relative;
+
+}
+
+ .movie img{
+  object-fit: cover;
+  height: 400px;
+  width: 100%;
+ }
+ .movie-info{
+   display: flex;
+   align-items: center;
+   justify-content: space-between;
+   padding: 1rem;
+
+ }
+
+ .movie-info h3{
+   margin: 0;
+ }
+
+ .movie-over{
+   background-color: white;
+   border-top-left-radius: 3px;
+   border-top-right-radius: 3px;
+   box-shadow: 0 -3px 5px rgba(0, 0, 0, 0.1);
+   color: #362129;
+   position: absolute;
+   bottom: 0;
+   left: 0;
+   right: 0;
+   padding: 1rem;
+   overflow: auto;
+   max-height: 100%;
+   transform: translateY(110%);
+   transition: transform 0.3s ease-in-out;
+ }
+
+ .movie:hover .movie-over{
+  transform: translateY(0%);
+
+ }
+
+ .tag{
+   background-color: #9D174D;
+   border-radius: 3px;
+   box-shadow: 1px -1px 5px rgba(0, 0, 0, 0.1);
+   padding: 0.1rem 0.4rem;
+   font-weight: bold;
+ }
+
+ .tag.green{
+  color: rgb(136, 241, 136);
+ }
+ 
+ .tag.orange{
+   color: rgb(245, 179, 56);
+}
+
+.tag.red{
+   color: rgb(223, 82, 82);
+}
+
+.material-icons-outlined {
+  font-family: 'Material Icons';
+  font-weight: normal;
+  font-style: normal;
+  font-size: 36px;  /* Preferred icon size */
+  display: inline-block;
+  line-height: 1;
+  text-transform: none;
+  letter-spacing: normal;
+  word-wrap: normal;
+  white-space: nowrap;
+  direction: ltr;
+  position: absolute;
+  top: 1rem;
+  right: 1rem;
+  color: yellow;
+
+  /* Support for all WebKit browsers. */
+  -webkit-font-smoothing: antialiased;
+  /* Support for Safari and Chrome. */
+  text-rendering: optimizeLegibility;
+
+  /* Support for Firefox. */
+  -moz-osx-font-smoothing: grayscale;
+
+  /* Support for IE. */
+  font-feature-settings: 'liga';
 }
